testing work branch and some small changes

--- a/gym-website/src/components/welcome-page/welcome-page.component.html
+++ b/gym-website/src/components/welcome-page/welcome-page.component.html
@@ -1,1 +1,5 @@
-<p>welcome-page works!</p>
+<div class="welcome-page-hero-img">
+  <div class="welcome-message-container">
+    <h1>supp mf's!!!</h1>
+  </div>
+</div>
