--- a/gym-website/src/components/welcome-page/welcome-page.component.css
+++ b/gym-website/src/components/welcome-page/welcome-page.component.css
@@ -8,5 +8,74 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 50%;
+  opacity: 70%;
+}
+
+/* FORMS START */
+.forms-wrapper {
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.form-container {
+  background-color: rgb(160, 182, 175);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin: 15px;
+  height: 400px;
+  width: 600px;
+  z-index: 55;
+}
+
+input {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+/* below 500px */
+
+.opened-navbar {
+  background-color: grey;
+  position: absolute;
+  top: 60px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* opacity: 70%; */
+}
+
+.navbar-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 60px;
+  flex-direction: column;
+  width: 100%;
+}
+
+ul {
+  width: 100%;
+  text-align: center;
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  margin: 15px;
+  font-size: 26px;
+  background-color: var(--secondary-color);
+}
+
+li:hover {
+  background-color: var(--primary-color);
 }
