--- a/gym-website/src/components/welcome-page/welcome-page.component.css
+++ b/gym-website/src/components/welcome-page/welcome-page.component.css
@@ -1,35 +1,76 @@
-.welcome-page-hero-img {
+.welcome-page-wrapper {
   background-image: url(../welcome-page/../../assets/images/welcome-page-img.png);
   position: absolute;
   top: 60px;
-  bottom: 50px;
+  bottom: 0;
   left: 0;
   width: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 70%;
 }
 
-/* FORMS START */
-.forms-wrapper {
-  background-color: black;
+.welcome-text-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.welcome-text-container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  position: relative;
+  top: 50px;
+  background-color: var(--secondary-color);
+  color: white;
+  padding: 10px 40px;
+  border-radius: 5px;
+  border: solid white 2px;
+  margin: 0 10px;
+}
+
+/* FORMS START */
+
+.forms-wrapper-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  width: 100%;
+  height: 80%;
 }
 
 .form-container {
-  background-color: rgb(160, 182, 175);
+  background-color: rgb(154, 183, 174);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   flex-direction: column;
-  margin: 15px;
-  height: 400px;
+  padding: 20px 0;
   width: 600px;
-  z-index: 55;
+  z-index: 5;
+  border-radius: 3px;
+  border: solid white 2px;
+}
+
+.close-form-button {
+  display: flex;
+  width: 100%;
+  justify-content: end;
+}
+
+.close-button-img-container {
+  background-image: url(../../assets/images/close-window-button.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 30px;
+  width: 30px;
+  margin-right: 30px;
+  cursor: pointer;
 }
 
 input {
@@ -42,16 +83,41 @@ input {
   box-sizing: border-box;
 }
 
+h2 {
+  margin-bottom: 50px;
+}
+
+.submit-form-button {
+  width: fit-content;
+  height: 30px;
+  background-color: var(--buttons);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
+  font-size: 15px;
+  border: solid 2px black;
+  border-radius: 3px;
+  transition: transform 0.5s;
+}
+
+.submit-form-button:hover {
+  transform: scale(1.1);
+  color: var(--buttons);
+  background-color: white;
+  cursor: pointer;
+}
+
 /* below 500px */
 
 .opened-navbar {
-  background-color: grey;
+  background-image: url(../welcome-page/../../assets/images/nav-menu-bg-img.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   position: absolute;
-  top: 60px;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  /* opacity: 70%; */
 }
 
 .navbar-content {
@@ -74,6 +140,10 @@ li {
   margin: 15px;
   font-size: 26px;
   background-color: var(--secondary-color);
+  color: white;
+  border-radius: 3px;
+  border: solid white 2px;
+  cursor: pointer;
 }
 
 li:hover {
