--- a/gym-website/src/shared/header/header.component.css
+++ b/gym-website/src/shared/header/header.component.css
@@ -62,6 +62,15 @@
   display: none;
 }
 
+span {
+  cursor: pointer;
+  transition: transform 1s;
+}
+
+span:hover {
+  transform: scale(2);
+}
+
 /* MOBILE WIDTH START */
 @media screen and (max-width: 500px) {
   .navbar-container {
@@ -74,44 +83,13 @@
     margin: 0 25px;
   }
 
-  /* .opened-navbar {
-    background-color: grey;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 90%;
-  }
-
-  .navbar-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 60px;
-    flex-direction: column;
-    width: 100%;
-  }
-
-  ul {
-    width: 100%;
-    text-align: center;
-    list-style: none;
-    padding: 0;
-  }
-
-  li {
-    margin: 15px;
-    font-size: 26px;
-    background-color: var(--secondary-color);
-  }
-
-  li:hover {
-    background-color: var(--primary-color);
-  } */
-
   .header-button {
     margin: 5px;
   }
 }
 /* MOBILE WIDTH END */
+
+.disabled-button {
+  background-color: gray;
+  color: white;
+}
