--- a/gym-website/src/styles.css
+++ b/gym-website/src/styles.css
@@ -10,3 +10,47 @@ body {
   --buttons: #5f7470;
   --text-color: #e7ecef;
 }
+
+/* NAVBAR STYLES START */
+.opened-navbar {
+  background-image: url(../welcome-page/../../assets/images/nav-menu-bg-img.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 60px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.navbar-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 60px;
+  flex-direction: column;
+  width: 100%;
+}
+
+.navbar-ul {
+  width: 100%;
+  text-align: center;
+  list-style: none;
+  padding: 0;
+}
+
+.navbar-li {
+  margin: 15px;
+  font-size: 26px;
+  background-color: var(--secondary-color);
+  color: white;
+  border-radius: 3px;
+  border: solid white 2px;
+  cursor: pointer;
+}
+
+.navbar-li:hover {
+  background-color: var(--primary-color);
+}
+/* NAVBAR STYLES END */
