tested api service

--- a/gym-website/src/components/welcome-page/welcome-page.component.html
+++ b/gym-website/src/components/welcome-page/welcome-page.component.html
@@ -120,3 +120,8 @@
 </div>
 <!-- 
 page not found uradi home page uradi -->
+
+<!-- dignin i login funkcionalnosti dodati u pagenotfound -->
+
+<!-- plan - skica
+ -->
