--- a/gym-website/src/components/welcome-page/welcome-page.component.html
+++ b/gym-website/src/components/welcome-page/welcome-page.component.html
@@ -58,7 +58,7 @@
           class="submit-form-button"
           type="submit"
         >
-          {{ logInForm.valid ? "Create account" : "Enter valid data!" }}
+          {{ signInForm.valid ? "Create account" : "Enter valid data!" }}
         </button>
       </div>
     </form>
