--- a/gym-website/src/components/home-page/home-page.component.html
+++ b/gym-website/src/components/home-page/home-page.component.html
@@ -8,18 +8,12 @@
       we offer. to do
     </h3>
   </div>
-  <div class="diff-categories-container">
-    <ul>
-      <li (click)="updateExerDiffValue('beginner')">beginner</li>
-      <li (click)="updateExerDiffValue('intermediate')">intermediate</li>
-      <li (click)="updateExerDiffValue('expert')">expert</li>
-    </ul>
-    <div style="height: 200px; width: 300px; background-color: blueviolet">
-      <ul *ngFor="let data of beginnerExerData; let i = index">
-        <li (click)="goToExerciseDdetails(data.name)">{{ data.name }}</li>
-      </ul>
-    </div>
-  </div>
+</div>
+
+<div>
+  <ul *ngFor="let exercise of gymExercises">
+    <li>{{ exercise.WorkOut }}</li>
+  </ul>
 </div>
 
 <ng-container *ngIf="isHamMenuOpen">
